--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,7 @@ footer {
     margin-left:20% ;
     margin-right:20%;
     text-wrap: wrap;
+    overflow-wrap: anywhere;
 }
 
 .resume_container {
