--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,21 @@ footer {
     overflow-wrap: anywhere;
 }
 
+@media screen and (max-width: 600px) { /* Adjust breakpoint as needed */
+    .main {
+        margin-left: 5%; /* Smaller margins for small screens */
+        margin-right: 5%;
+    }
+}
+
+@media screen and (max-width: 400px) { /* Even smaller screens */
+    .main {
+        margin-left: 0; /* Remove margins entirely */
+        margin-right: 0;
+    }
+}
+
+
 .resume_container {
     width: 100%;
     padding: 2em;
