--- a/styles.css
+++ b/styles.css
@@ -159,11 +159,9 @@ footer {
 .intro{
     text-align: center;
     font-size: 20px;
-}
-
-.textbody{
-    margin: 0;
-    text-align: center;
+    margin-left:20% ;
+    margin-right:20%;
+    text-wrap: wrap;
 }
 
 .main{
@@ -175,19 +173,18 @@ footer {
 }
 
 @media screen and (max-width: 600px) { /* Adjust breakpoint as needed */
-    .main, .intro {
+    .main {
         margin-left: 5%; /* Smaller margins for small screens */
         margin-right: 5%;
     }
 }
 
 @media screen and (max-width: 400px) { /* Even smaller screens */
-    .main, .intro {
+    .main {
         margin-left: 0; /* Remove margins entirely */
         margin-right: 0;
     }
 }
-
 
 .resume_container {
     width: 100%;
