--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ header {
     font-size: 12px;
     margin: 0;
     padding: 0.5rem;
-    background-color: light-dark(var(--light-header), var(--dark-header));
+    background-color: light-dark(var(--light-bg), var(--dark-bg));
     width: 100%;
     position: relative;
     align-items: center;
